@@ -19,6 +19,26 @@ A guide to modern Java (Java 17)
 13. [datastructure.md](guide/chapter20-datastructure.md)
 14. [sort.md](guide/chapter21-sort.md)
 
+
+## Using Java Shell (jshell)
+
+Each chapter comes with executable examples that you can run using jshell.
+
+To get the examples, just clone this repository
+```
+  git clone http://github.com/forax/java-guide
+```
+
+Then run jshell (at least Java 14 version)
+```
+   jshell ----enable-preview
+```
+
+Then you can copy paste the examples inside jshell and see by yourself.
+
+To quit use '/exit', to have have verbose error message '/set feedback verbose', otherwise to get the help '/help'
+
+
 ### Build markdown files from jshell files
 
 Using java 14
